Updated the JNB documentation

--- a/PrOMMiS_LCA_Model.ipynb
+++ b/PrOMMiS_LCA_Model.ipynb
@@ -1150,231 +1150,7 @@
    "execution_count": null,
    "id": "db70773f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating exchange database, this may take a couple minutes...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use 374 ppm REO Feed:  skip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipping flow: 374 ppm REO Feed\n",
-      "Do you want to select an existing quantitative reference flow or create a new one?\n",
-      "1. Select existing flow\n",
-      "2. Create new flow\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter your choice (1 or 2):  1\n",
-      "Enter flow name keyword(s). Type 'skip' to skip this flow.  copper\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Searching for flows containing 'copper'...\n",
-      "Found 196 flows matching 'copper'\n",
-      "Filtered to 9 PRODUCT_FLOW flows\n",
-      "\n",
-      "Matching flows:\n",
-      "--------------------------------------------------------------------------------\n",
-      "  1. copper\n",
-      "     UUID: 8e7135e4-1274-9414-a155-9dc1e2fd9bb4\n",
-      "\n",
-      "  2. Copper, primary, at refinery\n",
-      "     UUID: 018c2645-7622-321b-a9ef-760b1fd90371\n",
-      "\n",
-      "  3. Copper oxide, at plant\n",
-      "     UUID: bc9f2a96-56a5-4219-8c61-58356a0eaabd\n",
-      "\n",
-      "  4. Crude cobalt hydroxide; at plant; 35% cobalt and 0.47% copper\n",
-      "     UUID: 2b274bb6-ed91-4ec0-8386-07c602bd6eb9\n",
-      "\n",
-      "  5. Copper, at regional storage\n",
-      "     UUID: 19fb905b-a259-3480-848f-af6a058a4d99\n",
-      "\n",
-      "  6. Copper product manufacturing, average metal working\n",
-      "     UUID: 24744899-a338-3943-9f83-764d10600319\n",
-      "\n",
-      "  7. Copper Chromium Arsenate (CCA), at plant\n",
-      "     UUID: 8d2dd2ca-07cb-3ace-b1db-6f7efff79337\n",
-      "\n",
-      "  8. Copper, at plant\n",
-      "     UUID: 12e1296e-4e80-35e8-910a-de17402a0b9c\n",
-      "\n",
-      "  9. Cobalt ore; at mine; 0.47% cobalt and 2.44% copper\n",
-      "     UUID: 4724dc20-fc73-4f23-83f7-12ac98f37eac\n",
-      "\n",
-      "  1. Flow_Name: copper | UUID: 8e7135e4-1274-9414-a155-9dc1e2fd9bb4\n",
-      "  2. Flow_Name: Copper, primary, at refinery | UUID: 018c2645-7622-321b-a9ef-760b1fd90371\n",
-      "  3. Flow_Name: Copper oxide, at plant | UUID: bc9f2a96-56a5-4219-8c61-58356a0eaabd\n",
-      "  4. Flow_Name: Crude cobalt hydroxide; at plant; 35% cobalt and 0.47% copper | UUID: 2b274bb6-ed91-4ec0-8386-07c602bd6eb9\n",
-      "  5. Flow_Name: Copper, at regional storage | UUID: 19fb905b-a259-3480-848f-af6a058a4d99\n",
-      "  6. Flow_Name: Copper product manufacturing, average metal working | UUID: 24744899-a338-3943-9f83-764d10600319\n",
-      "  7. Flow_Name: Copper Chromium Arsenate (CCA), at plant | UUID: 8d2dd2ca-07cb-3ace-b1db-6f7efff79337\n",
-      "  8. Flow_Name: Copper, at plant | UUID: 12e1296e-4e80-35e8-910a-de17402a0b9c\n",
-      "  9. Flow_Name: Cobalt ore; at mine; 0.47% cobalt and 2.44% copper | UUID: 4724dc20-fc73-4f23-83f7-12ac98f37eac\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Select a flow (1-9 or 'q' to quit):  8\n",
-      "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use DEHPA:  skip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipping flow: DEHPA\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Electricity, AC, 120 V:  skip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipping flow: Electricity, AC, 120 V\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Heat:  skip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipping flow: Heat\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Hydrochloric Acid:  skip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipping flow: Hydrochloric Acid\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Kerosene:  skip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipping flow: Kerosene\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Oxalic Acid:  skip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipping flow: Oxalic Acid\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Sodium Hydroxide:  skip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipping flow: Sodium Hydroxide\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Solid Waste:  skip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipping flow: Solid Waste\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Sulfuric Acid:  skip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipping flow: Sulfuric Acid\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Wastewater:  skip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipping flow: Wastewater\n",
-      "Successfully created process: Test Process 4\n",
-      "Process saved successfully to openLCA database!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create process usign the create_new_process function\n",
     "process = lca_prommis.create_lca.create_new_process(netl,df,process_name,process_description)\n",
@@ -1389,6 +1165,16 @@
    "metadata": {},
    "source": [
     "##### <span style=\"color:black; font-weight:bold\"> Create product system </span> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65b23081",
+   "metadata": {},
+   "source": [
+    "<span style=\"color:black\">  \n",
+    "In the following cell, the created process is used to generate a product system and build the supply chain.\n",
+    "</span>"
    ]
   },
   {
@@ -1409,7 +1195,38 @@
    "id": "a3ead577",
    "metadata": {},
    "source": [
-    "##### <span style=\"color:black; font-weight:bold\"> Run analysis </span> "
+    "##### <span style=\"color:black; font-weight:bold\"> Conduct analysis </span> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92c87904",
+   "metadata": {},
+   "source": [
+    "<span style=\"color:black\">  \n",
+    "To conduct the analysis, we need to define three main elements:\n",
+    "\n",
+    "* <u>The client</u>: In this case it is netl created in previous cells\n",
+    "* <u>The product system</u>: The cell above creates a product system and extracts its Universally Unique Identifier (UUID)\n",
+    "* <u>The impact assessment method</u>: The PrOMMiS openLCA database is downloaded in the beginning of step 6. This database contains an impact assessment method that encloses the following impact cateogories:\n",
+    "    * <i>Acidification Potential - TRACI 2.1 (NETL)</i>: Imported from TRACI 2.1\n",
+    "    * <i>Cumulative Energy Demand</i>: developed by compiling all the characterization factors from the Federal LCA Commons CED method\n",
+    "    * <i>Cumulative Energy Demand - Non-renewable</i>: Developed by only including the characterization factors for non-renewable resources\n",
+    "    * <i>Cumulative Energy Demand - renewable</i>: Developed by only including the characterization factors for renewable resources\n",
+    "    * <i>Eutrophication Potential - TRACI 2.1 (NETL)</i>: Imported from TRACI 2.1\n",
+    "    * <i>Global Warming Potential [AR4, 100 yr]</i>: Imported from TRACI 2.1\n",
+    "    * <i>Global Warming Potential [AR4, 20 yr]</i>: Imported from TRACI 2.1\n",
+    "    * <i>Global Warming Potential [AR5, 100 yr]</i>: Imported from TRACI 2.1\n",
+    "    * <i>Global Warming Potential [AR5, 20 yr]</i>: Imported from TRACI 2.1\n",
+    "    * <i>Global Warming Potential [AR6, 100 yr]</i>: Imported from TRACI 2.1\n",
+    "    * <i>Global Warming Potential [AR6, 20 yr]</i>: Imported from TRACI 2.1\n",
+    "    * <i>Ozone Depletion Potential - TRACI 2.1 (NETL)</i>: Imported from TRACI 2.1\n",
+    "    * <i>Particulate Matter Formation Potential - TRACI 2.1 (NETL)</i>: Imported from TRACI 2.1\n",
+    "    * <i>Photochemical Smog Formation Potential- TRACI 2.1 (NETL)</i>: Imported from TRACI 2.1\n",
+    "    * <i>Water Consumption (NETL)</i>: Developed by NETL - imported from TRACI 2.1 (NETL)\n",
+    "    \n",
+    ">>>><i><b>NOTE</b></i>: The impact assessment method is defined in the cell below using its UUID. The PrOMMiS openLCA database, and consequently the impact assessment method enclosed in it, might change due to ongoing improvement. It's advised to check the impact assessment method UUID in openLCA before running the next cell.\n",
+    "</span>"
    ]
   },
   {
@@ -1419,13 +1236,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First we need to select the impact assessment method uuid\n",
-    "# In this project we are developing our own impact assessment \n",
-    "# method that calculates the global warming potenit, cumulative energy demand, water consumption, and acidification potential\n",
-    "# The developed method is included in the database attached with this jupyter notebook\n",
-    "# TODO: add uuid of impact assessment method \n",
+    "# Impact asessment method UUID\n",
     "impact_method_uuid = '60cb71ff-0ef0-4e6c-9ce7-c885d921dd15'\n",
-    "\n",
+    "# Generate result. The outcome of the run_analysis is a result object which \n",
+    "# will be used in the following cells to extract total and contribution tree results.\n",
     "result = lca_prommis.run_analysis(netl, ps_uuid, impact_method_uuid)"
    ]
   },
@@ -1435,6 +1249,16 @@
    "metadata": {},
    "source": [
     "##### <span style=\"color:black; font-weight:bold\"> Generate Results - Total Environmental Impact </span> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21e84055",
+   "metadata": {},
+   "source": [
+    "<span style=\"color:black\">  \n",
+    "In the next cell, the generate_total_results extracts the total environmental impact from the 'result' object for each impact category.\n",
+    "</span>"
    ]
   },
   {
@@ -1459,20 +1283,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f409b4e6",
+   "metadata": {},
+   "source": [
+    "<span style=\"color:black\">  \n",
+    "In the following cell, the generate_contribution_tree function extracts the contribution by category.\n",
+    "The contribution tree has two main aspects:\n",
+    "\n",
+    "* <i><u>The maximum number of nodes</u></i>: The number of nodes reflects the number of child/constituting nodes to be expanded (e.g., electricity, heat, sulfuric acic, etc.). <i><u><b>Note:</b></u></i> Setting the number of nodes to (-1) returns all the nodes possible <i>(Recommended)</i>.\n",
+    "</br>\n",
+    "\n",
+    "* <i><u>The maximum number of levels</u></i>: The number of levels reflects the number of steps away from the main product. <i><u><b>Note:</b></u></i> Setting the number of levels to (1) reports the total impact for each node without any further remifications.\n",
+    "</span>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1af1df7a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# use the generate_contribution_tree to generate the results by category\n",
-    "# here we have to determine the number of nodes and levels in the generates tree\n",
-    "# the number of nodes reflects the number of child/constituting nodes to be expanded (e.g., electricity, heat, sulfuric acic, etc.)\n",
-    "# selecting three nodes will show the top three contributors only\n",
-    "max_expand_nodes = 5 # this is an example and the user can change this\n",
-    "# the number of levels reflects the number of steps away from the main product\n",
-    "max_expand_levels = 2\n",
-    "# Note: this step will store the results for each impact cateogory in a separate excel file\n",
+    "# Input the number of nodes\n",
+    "max_expand_nodes = input(\"Please enter the maximum number of nodes: \")\n",
+    "\n",
+    "# Input the number of levels\n",
+    "max_expand_levels = input (\"Please enter the maximum number of levels: \")\n",
+    "\n",
+    "# Generate the contirbution results\n",
     "lca_prommis.generate_contribution_tree(netl, max_expand_levels, max_expand_nodes)"
    ]
   }
