Documentation + Fig plotting function

--- a/PrOMMiS_LCA_Model.ipynb
+++ b/PrOMMiS_LCA_Model.ipynb
@@ -1205,6 +1205,10 @@
     "</br>\n",
     "\n",
     "* <i><u>The maximum number of levels</u></i>: The number of levels reflects the number of steps away from the main product. <i><u><b>Note:</b></u></i> Setting the number of levels to (1) reports the total impact for each node without any further remifications.\n",
+    "\n",
+    "\n",
+    "><i><b>NOTE</b></i>: If you set download_results to True, the contribution tree results will be downloaded and can be accessed through the 'output' folder in the current working directory.\n",
+    "\n",
     "</span>"
    ]
   },
@@ -1222,7 +1226,7 @@
     "max_expand_levels = input (\"Please enter the maximum number of levels: \")\n",
     "\n",
     "# Generate the contirbution results\n",
-    "lca_prommis.generate_contribution_tree(netl, max_expand_levels, max_expand_nodes)"
+    "lca_prommis.generate_contribution_tree(netl, max_expand_levels, max_expand_nodes, download_results = True)"
    ]
   }
  ],
