wait_for_result fix + minor changes

--- a/PrOMMiS_LCA_Model.ipynb
+++ b/PrOMMiS_LCA_Model.ipynb
@@ -1063,7 +1063,7 @@
     "# This 374 ppm value is directly calculated from the flowsheet. The original study actually used 357 ppm as the feed concentration.\n",
     "\n",
     "# Run the merge_flows function for the product\n",
-    "df = lca_prommis.final_lca.merge_flows(df, merge_source='Roaster Product', new_flow_name='99.85% REO Product')\n",
+    "df = lca_prommis.final_lca.merge_flows(df, merge_source='Roaster Product', new_flow_name='73.4% REO Product')\n",
     "\n",
     "# Run the merge_flows function for the liquid waste flows\n",
     "df = lca_prommis.final_lca.merge_flows(df, merge_source='Wastewater', new_flow_name='Wastewater', merge_column='Category') \n",
@@ -1076,7 +1076,7 @@
     "try:\n",
     "    finalized_df = lca_prommis.final_lca.finalize_df(\n",
     "        df=df, \n",
-    "        reference_flow='99.85% REO Product', \n",
+    "        reference_flow='73.4% REO Product', \n",
     "        reference_source='Roaster Product',\n",
     "        water_type='raw fresh water'\n",
     "    )\n",
@@ -1221,7 +1221,7 @@
     "* <u>LCA Amount:</u> This is the amount normalized to 1 kg of the quantitative reference flow. In this case, it is the amount per kg REO product.\n",
     "* <u>LCA Unit</u>\n",
     "* <u>Is_input:</u> Determines whether the created exchange is an input or an output\n",
-    "* <u>Reference Product:</u> There should be one reference product. For example, in this case its the 99.85% REO Product.\n",
+    "* <u>Reference Product:</u> There should be one reference product. For example, in this case its the REO Product.\n",
     "* <u>Flow Type</u>\n",
     "* <u>Category:</u> Flows are labeled as Technosphere flows (referred to as product flows in openLCA), waste flows, and elementary flows.\n",
     "* <u>Context:</u> Elementary flows are assigned a context such as: emission/air, emission/ground, resource/ground, etc.\n",
@@ -1391,7 +1391,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter process name:  Test_Process_1\n"
@@ -1417,7 +1417,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter a process description:  Test_Description_1\n"
@@ -1472,7 +1472,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use 374 ppm REO Feed:  skip\n"
@@ -1489,7 +1489,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter your choice (1 or 2):  2\n"
@@ -1503,7 +1503,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use DEHPA:  skip\n"
@@ -1517,7 +1517,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Electricity, AC, 120 V:  \n"
@@ -1540,7 +1540,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Select a flow (1-1 or 'q' to quit):  1\n"
@@ -1734,7 +1734,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Select a provider process (1-141 or 'q' to quit):  28\n"
@@ -1748,7 +1748,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Hydrochloric Acid:  \n"
@@ -1779,7 +1779,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Select a flow (1-3 or 'q' to quit):  3\n"
@@ -1801,7 +1801,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Select a provider process (1-1 or 'q' to quit):  1\n"
@@ -1815,7 +1815,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Kerosene:  \n"
@@ -1842,7 +1842,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Select a flow (1-2 or 'q' to quit):  2\n"
@@ -1864,7 +1864,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Select a provider process (1-2 or 'q' to quit):  2\n"
@@ -1878,7 +1878,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Natural Gas:  skip\n"
@@ -1892,7 +1892,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Oxalic Acid:  skip\n"
@@ -1906,7 +1906,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Solid Waste:  skip\n"
@@ -1920,7 +1920,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Sulfuric Acid:  skip\n"
@@ -1934,7 +1934,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter flow name keyword(s). Type 'skip' to skip this flow. Press enter to use Wastewater:  skip\n"
@@ -3652,6 +3652,7 @@
    "source": [
     "# use the generate_total_results function to generate the total environmental impacts\n",
     "# this also stores the results in a csv stored in the output folder\n",
+    "result.wait_until_ready()\n",
     "total_impacts = lca_prommis.generate_total_results.generate_total_results(result)\n",
     "total_impacts"
    ]
