minor documentation edits

--- a/PrOMMiS_LCA_Model.ipynb
+++ b/PrOMMiS_LCA_Model.ipynb
@@ -731,7 +731,8 @@
     "\n",
     "Key Parameters:\n",
     "\n",
-    "- ```hours=1```: Time period for conversion (1 hour based on PrOMMiS model timestep)\n",
+    "- ```hours=1```: Time period for conversion (1 hour based on PrOMMiS model timestep).</br> \n",
+    "<u>Important note on timestep selection</u>: After converting values into LCA-relevant units, all emissions, as well as material and energy inputs, are normalized to the functional unit: in this case, 1 kg of REO product. This is done by dividing each input and emission by the amount of REO produced. In doing so, the influence of timestep selection is removed. Therefore, the chosen timestep has no impact on the final exchanges table used to build the openLCA model. \n",
     "- ```mol_to_kg=True```: Converts molar flows to mass flows using molecular weights\n",
     "- ```water_unit='m3'```: Standardizes water flows to cubic meters. Other options are 'L' and 'kg' (kg may cause errors when assigning a unit in openLCA)\n",
     "\n",
@@ -3742,7 +3743,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "olca_env",
    "language": "python",
    "name": "python3"
   },
