--- a/PrOMMiS_LCA_Model.ipynb
+++ b/PrOMMiS_LCA_Model.ipynb
@@ -1151,7 +1151,22 @@
    "metadata": {},
    "source": [
     "<span style = \"color:black\">\n",
-    "The cell below downloads the PrOMMiS openLCA database from EDX in JSONLD format and save it in a dedicated 'resources' folder in the current working directory. The following cell will require your EDX API key to download the requested database. Note that the resource ID is set in the next cell but it's advised to cross-check that the ID is correct. The database is constantly being improved and updated, and as a result can have a different resource ID.  \n",
+    "The cell below downloads the PrOMMiS openLCA database from EDX in JSONLD format and save it in a dedicated 'resources' folder in the current working directory. The following cell will require your EDX API key to download the requested database. Note that the resource ID is set in the next cell but it's advised to cross-check that the ID is correct. The database is constantly being improved and updated, and as a result can have a different resource ID.</br>\n",
+    "\n",
+    "The PrOMMiS openLCA database includes:\n",
+    "\n",
+    "* The life cycle assessment methods evaluating numerous categories including: water consumption, cumulative energy demand, global warming potential, and acidification potential.\n",
+    "\n",
+    "* The background data needed to model the coal refuse flowsheet. This data was retrieved from open-source databases including: USLCI, NETL UP library, and literature. Noteworthy, some processes were unavailable in open-source databases and as a result were modeled and icnluded in the PrOMMiS openLCA database using the following approaches:</br>\n",
+    "    * <b><u>Oxalic Acid</b></u>: The inventory for oxalic was retrieved from ecoinvent v3.11 using the followig process: Oxalic acid {RoW}| oxalic acid production | Cut-off, S </br>\n",
+    "    * <b><u>Ascorbic Acid</b></u>: The inventory for oxalic was retrieved from ecoinvent v3.11 using the followig process: Ascorbic acid {GLO}| market for ascorbic acid | Cut-off, S</br>\n",
+    "    * <b><u>DEHPA</b></u>: The foreground data for DEHPA was retrieved from Cao et al.(2023). To model DEHPA using the literature foreground data, we used the following inventory from the ecoinvent database:</br>\n",
+    "        * <b><u>Acetaldehyde</b></u>:The inventory for acetaldehyde was retrieved from ecoinvent v3.11 using the followig process: Acetaldehyde {GLO}| market for acetaldehyde | Cut-off, S </br>\n",
+    "        * <b><u>Phosphorus oxychloride</b></u>: The inventory for phosphorus oxychloride was retrieved from ecoinvent v3.11 using the followig process: Phosphorus oxychloride {GLO}| market for phoshorus oxychloride | Cut-off, S </br>\n",
+    "\n",
+    "<b><u>Sources</b></u>:</br>\n",
+    "[1] ecoinvent. (2024, November). ecoinvent version 3.11. Ecoinvent. \n",
+    "[2] Yuanyu Cao, Liang Li, Ying Zhang, Zengwen Liu, Liqi Wang, Fan Wu, Jing You, Co-products recovery does not necessarily mitigate environmental and economic tradeoffs in lithium-ion battery recycling, Resources, Conservation and Recycling, Volume 188, 2023, 106689, ISSN 0921-3449, https://doi.org/10.1016/j.resconrec.2022.106689.\n",
     "\n",
     "To verify that you're using the correct resource ID, follow this link: [https:/edx.netl.doe.gov/workspace/resources/prommis-lca-integration](https:/edx.netl.doe.gov/workspace/resources/prommis-lca-integration) \n",
     "</span>\n",
@@ -1456,6 +1471,8 @@
     "    1) Enter keyword to search for a flow\n",
     "    2) Select a flow from a provided list. The function automatically creates a list of all providers generating this flow.\n",
     "    3) Select a provider from the provided list.\n",
+    "\n",
+    "    \n",
     "</span>"
    ]
   },
@@ -3451,20 +3468,18 @@
     "* <u>The client</u>: In this case it is netl created in previous cells\n",
     "* <u>The product system</u>: The cell above creates a product system and extracts its Universally Unique Identifier (UUID)\n",
     "* <u>The impact assessment method</u>: The PrOMMiS openLCA database is downloaded in the beginning of step 6. This database contains an impact assessment method that encloses the following impact cateogories:\n",
-    "    * <i>Acidification Potential - TRACI 2.1 (NETL)</i>: Imported from TRACI 2.1\n",
+    "    * <i>Acidification Potential</i>: Imported from TRACI 2.1\n",
     "    * <i>Cumulative Energy Demand</i>: developed by compiling all the characterization factors from the Federal LCA Commons CED method\n",
     "    * <i>Cumulative Energy Demand - Non-renewable</i>: Developed by only including the characterization factors for non-renewable resources\n",
     "    * <i>Cumulative Energy Demand - renewable</i>: Developed by only including the characterization factors for renewable resources\n",
-    "    * <i>Eutrophication Potential - TRACI 2.1 (NETL)</i>: Imported from TRACI 2.1\n",
-    "    * <i>Global Warming Potential [AR4, 100 yr]</i>: Imported from TRACI 2.1\n",
-    "    * <i>Global Warming Potential [AR4, 20 yr]</i>: Imported from TRACI 2.1\n",
-    "    * <i>Global Warming Potential [AR5, 100 yr]</i>: Imported from TRACI 2.1\n",
-    "    * <i>Global Warming Potential [AR5, 20 yr]</i>: Imported from TRACI 2.1\n",
+    "    * <i>Eutrophication Potential</i>: Imported from TRACI 2.1\n",
     "    * <i>Global Warming Potential [AR6, 100 yr]</i>: Imported from TRACI 2.1\n",
     "    * <i>Global Warming Potential [AR6, 20 yr]</i>: Imported from TRACI 2.1\n",
-    "    * <i>Ozone Depletion Potential - TRACI 2.1 (NETL)</i>: Imported from TRACI 2.1\n",
-    "    * <i>Particulate Matter Formation Potential - TRACI 2.1 (NETL)</i>: Imported from TRACI 2.1\n",
-    "    * <i>Photochemical Smog Formation Potential- TRACI 2.1 (NETL)</i>: Imported from TRACI 2.1\n",
+    "    * <i>Human Health - cancer</i>: Imported from TRACI 2.1\n",
+    "    * <i>Human Health - non-cancer</i>: Imported from TRACI 2.1\n",
+    "    * <i>Human Health - particulate matter</i>: Imported from TRACI 2.1\n",
+    "    * <i>Ozone depletion</i>: Imported from TRACI 2.1\n",
+    "    * <i>Smog Formation</i>: Imported from TRACI 2.1\n",
     "    * <i>Water Consumption (NETL)</i>: Developed by NETL - imported from TRACI 2.1 (NETL)\n",
     "    \n",
     ">>>><i><b>NOTE</b></i>: The impact assessment method is defined in the cell below using its UUID. The PrOMMiS openLCA database, and consequently the impact assessment method enclosed in it, might change due to ongoing improvement. It's advised to check the impact assessment method UUID in openLCA before running the next cell.\n",
