--- a/PrOMMiS_LCA_Model.ipynb
+++ b/PrOMMiS_LCA_Model.ipynb
@@ -485,7 +485,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "process_name = input(\"Enter process name: \")  "
+    "process_name = \"REO Extraction From Coal Mining Refuse | UKy Flowsheet\""
    ]
   },
   {
@@ -503,7 +503,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "process_description = input(\"Enter a process description: \")"
+    "process_description = \"This process involves the production of a Rare Earth Oxide solid extraction from coal mining refuse. The scope of this work starts with the leaching of size-reduced REE-rich feedstock (REE: Rare Earth Elements) and ends with the recovery of mixed REO solids. The process consists of six main stages: 1) Mixing and Leaching, 2) Rougher Solvent Extraction, 3) Cleaner Solvent Extraction, 4) Precipitation, 5) Solid-Liquid (S/L) separation, and 6) Roasting. This process does not account for upstream processes leading to the production of REE-rich feedstock nor does it account for Downstream processes leading to the separation of REE contained in the REO. The main product is a rare earth oxide solid with no other by-products or co-products. The functional unit is 1 kg of recovered REO solids. The material and energy inputs shown in the system boundary figure below have been shortlisted and estimated based on the UKy flowsheet output, as well as other relevant literature.\""
    ]
   },
   {
